--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Text Analyzer tool. Edits your text in some particular way">
+    <meta http-equiv="refresh" content="0; url=https://TextAnalyzer.github.io/templates/index.html">
+
+    <title>THT Text Analyzer</title>
+  </head>
+  <body>
+  </body>
+</html>
