--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Text Analyzer tool. Edits your text in some particular way">
-    <meta http-equiv="refresh" content="0; url=https://repo.github.io/templates/index.html">
+    <meta http-equiv="refresh" content="0; url=https://devil-shiva/textanalyzer.github.io/templates/index.html">
 
     <title>THT Text Analyzer</title>
   </head>
